<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txt_login"
            style="@style/Title_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Logg_inn"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/login_epost"
            style="@style/Margin_Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="E-post"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/login_passord"
            style="@style/Margin_Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Passord"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Margin_Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Logg_inn" />

        <Button
            android:id="@+id/btn_ikke_registrert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registrer_deg" />

        <TextView
            android:id="@+id/txt_glemt_passord"
            style="@style/logg_inn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:paddingTop="5dp"
            android:text="@string/Glemt_passord" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>